<resources>
    <string name="app_name" translatable="false">Payment Form</string>
    <string name="payment_data">Payment Data</string>
    <string name="total_price">Total Price</string>
    <string name="payment_method">Payment Method</string>
    <string name="choose_payment_method">Choose a Payment Method</string>
    <string name="card_number">Card Number</string>
    <string name="valid_until">Valid Until</string>
    <string name="cvv" translatable="false">CVV</string>
    <string name="mail">Mail</string>
    <string name="back">Back</string>
    <string name="text_continue">Continue</string>

    <string-array name="payment_methods_list">
        <item>Mastercard</item>
        <item>Visa</item>
        <item>American Express</item>
    </string-array>
    <string name="invalid_mail">Invalid Mail</string>
    <string name="invalid_cvv">Invalid CVV</string>
    <string name="invalid_card">Invalid card number</string>
    <string name="invalid_until">Invalid expiration date</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="details">Payment Details</string>
    <string name="card_owner">Card Owner</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="loading">Loading</string>

</resources>